--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -79,6 +79,84 @@
 .digital{
    &__inner{
       padding: 180px 0 212px;
+      // height: 1162px;
+      position: relative;
+      &-head{
+         position: absolute;
+         font-size: 36px;
+         line-height: 46px;
+         @include gil600;
+         color: $head;
+         max-width: 358px;
+         top: 180px;
+         left: 0;
+      }
+      &-items{
+        height: 1162px;
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: wrap-reverse;
+        align-items: flex-start;
+        justify-content: space-between;
+      }
+      &-item{
+         width: 380px;
+         box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+         border-radius: 10px;
+         background-color: #fff;
+         padding: 48px;
+         position: relative;
+         &--one{
+            order: 1;
+            margin-top: auto;
+            margin-bottom: auto;
+         }
+      }
+      &-image{
+         text-align: center;
+         margin-bottom: 56px;
+      }
+      &-img{
+         background-repeat: no-repeat;
+         background-position: center center;
+         background-size: cover;
+      }
+      &-top{
+         position: absolute;
+         top: -25px;
+      }
+      &-toppy{
+         padding-top: 236px;
+      }
+      &-title{
+         font-size: 20px;
+         line-height: 30px;
+         @include gil600;
+         margin-bottom: 16px;
+      }
+      &-text{
+         opacity: 0.6;
+         margin-bottom: 32px;
+      }
+      &-link{
+         color: #5A98D0;
+         font-size: 14px;
+         line-height: 30px;
+         @include gil600;
+         padding-right: 52px;
+         position: relative;
+         &::after{
+            content: '';
+            position: absolute;
+            background-image: url(../images/arrow-right.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 32px;
+            height: 32px;
+            right: 0;
+         }
+      }
    }
 }
 
