--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -160,5 +160,198 @@
    }
 }
 
-
 // end digital 
+
+// start footer
+
+.footer{
+   background: #5A98D0;
+   border-radius: 200px 0px 0px 0px;
+   color: #fff;
+   &__client{
+      &-inner{
+         padding: 96px 0 125px;
+      }
+      &-box{
+         display: flex;
+         margin-bottom: 111px;
+      }
+      &-title{
+         font-size: 36px;
+         line-height: 46px;
+         @include gil600;
+         max-width: 225px;
+         width: 100%;
+         margin-right: 97px;
+      }
+      &-text{
+         opacity: 0.6;
+         max-width: 540px;
+         width: 100%;
+      }
+      &-list{
+         display: flex;
+         flex-wrap: wrap;
+         width: 100%;
+      }
+      &-name{
+         width: 25%;
+         text-align: center;
+         border-right: 1px solid rgba(255, 255, 255, 0.2);
+         border-top: 1px solid rgba(255, 255, 255, 0.2);
+         &:nth-child(4n+4){
+            border-right: none;
+         }
+         &:nth-child(-n+4){
+            border-top: none;
+         }
+      }
+      &-link{
+         padding: 41px 0;
+         width: 100%;
+         letter-spacing: 0.02em;
+         font-size: 20px;
+         line-height: 46px;
+         text-transform: uppercase;
+         @include gil600;
+         font-weight: normal;
+         transition: all .5s;
+         &:hover{
+            background-color: rgba(31, 63, 104, 0.2);
+         }
+         &--trans{
+            text-transform: none;
+         }
+      }
+   }
+   &__info{
+      background: #316099;
+      border-radius: 0px 200px 0px 0px;
+      margin-right: 96px;
+      padding-left: 86px;
+   }
+   &__team{
+      &-inner{
+         padding: 91px 0 96px;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         position: relative;
+         &::before{
+            content: '';
+            position: absolute;
+            height: 1px;
+            background-color: rgba(255, 255, 255, 0.2);
+            bottom: 0;
+            right: 0;
+            left: -100%;
+            
+         }
+      }
+      &-box{
+      }
+      &-title{
+         font-size: 36px;
+         line-height: 46px;
+         @include gil600;
+         max-width: 320px;
+         width: 100%;
+         margin-bottom: 32px;
+      }
+      &-text{
+         max-width: 460px;
+         width: 100%;
+         opacity: 0.6;
+      }
+      &-btn{
+         text-align: center;
+         letter-spacing: 0.04em;
+         background: #5A98D0;
+         border-radius: 10px;
+         width: 220px;
+         padding: 15px;
+      }
+   }
+   &__bottom{
+      &-inner{
+         padding: 97px 0 64px;
+         display: flex;
+      }
+      &-item{
+        &--left{
+         max-width: 300px;
+         width: 100%;
+         margin-right: 100px;
+        }
+        &--middle{
+         max-width: 200px;
+         width: 100%;
+         margin-right: 77px;
+        }
+        &--right{
+         max-width: 150px;
+         width: 100%;
+        }
+      }
+      &-title{
+         font-size: 28px;
+         line-height: 46px;
+         letter-spacing: 0.02em;
+         @include gil600;
+         display: flex;
+         align-items: center;
+         color: #fff;
+         margin-bottom: 33px;
+      }
+      &-image{
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+         padding-right: 15px;
+      }
+      &-head{
+         font-size: 20px;
+         line-height: 30px;
+         @include gil600;
+         margin-bottom: 32px;
+      }
+      &-name{
+         margin-bottom: 24px;
+      }
+      &-link{
+         padding-left: 35px;
+         position: relative;
+         &::before{
+            content: 'A.';
+            position: absolute;
+            left: 0;
+         }
+      }
+      &-tel{
+         &::before{
+            content: 'T.';
+            position: absolute;
+            left: 0;
+         }
+      }
+      &-email{
+         &::before{
+            content: 'E.';
+            position: absolute;
+            left: 0;
+         }
+      }
+      &-links{
+      }
+      &-names{
+         margin-bottom: 16px;
+      }
+   }
+   &__copy{
+      opacity: 0.4;
+      padding-bottom: 64px;
+   }
+}
+
+
+// end footer
