--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,7 +7,7 @@
 
 .header{
    position: relative;
-   background-position-x: right;
+   background-position: right center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
@@ -535,3 +535,6 @@
 
 
 // end footer
+
+
+@import '_media';
